--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -1,4 +1,6 @@
-Дисконт (от англ. discount — скидка, разница) — многозначное понятие, зависящее от экономического рынка, к которому оно применяется
+Дисконт (от англ. <i>discount</i> discount — скидка, разница) — 
+многозначное понятие, зависящее от 
+экономического рынка, к которому оно применяется
 
 
 
