Выделение курсивом слово вычет

--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -1,7 +1,10 @@
 Дисконт (от англ. <i>discount</i> discount — <i>скидка</i>, разница) — 
 многозначное понятие, зависящее от 
-экономического рынка, к которому оно применяется
+экономического рынка, к которому оно применяется 
 
 
-
+<br>
+<i>
+    вычет
+</i>
 
