Выделение курсивом слово разница

--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -1,4 +1,4 @@
-Дисконт (от англ. <i>discount</i> discount — <i>скидка</i>, разница) — 
+Дисконт (от англ. <i>discount</i> discount — <i>скидка</i>, <i>разница</i>) — 
 многозначное понятие, зависящее от 
 экономического рынка, к которому оно применяется 
 
