--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -1,6 +1,6 @@
-Дисконт (от англ. <i>discount</i> discount — <i>скидка</i>, <i>разница</i>) — 
+<b>Дисконт</b>  (от англ. <i>discount</i> discount — <i>скидка</i>, <i>разница</i>) — 
 многозначное понятие, зависящее от 
-экономического рынка, к которому оно применяется 
+экономического рынка, к  которому оно применяется 
 
 
 <br>
