--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -1,10 +1,21 @@
-<b>Дисконт</b>  (от англ. <i>discount</i> discount — <i>скидка</i>, <i>разница</i>) — 
-многозначное понятие, зависящее от 
-экономического рынка, к  которому оно применяется 
+<p>Дисконт</p>
 
+<p>
+    <b>Дисконт</b>  (от англ. <i>discount</i> discount — <i>скидка</i>, <i>разница</i>) — 
+    многозначное понятие, зависящее от 
+    экономического рынка, к  которому оно применяется 
+</p>
 
-<br>
-<i>
-    вычет
-</i>
+<p>
+    Дисконт на товарном рынке
+</p>
 
+<p>
+    Скидка может быть предложена при незамедли-
+    тельной оплате наличными (наличная скидка) либо при оптовой
+    закупке (торговая скидка). Торговые скидки предоставляются для
+    того, чтобы позволить продавцу увеличить объём продаж и, сле-
+    довательно, достичь экономии от масштаба, или используются,
+    как уловка, чтобы заручиться «верностью» клиента, или предо-
+    ставляются по требованию крупного и влиятельного покупателя.
+</p>
