--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -1,4 +1,6 @@
-<p>Дисконт</p>
+<h1>
+    Дисконт
+</h1>
 
 <p>
     <b>Дисконт</b>  (от англ. <i>discount</i> discount — <i>скидка</i>, <i>разница</i>) — 
@@ -6,9 +8,10 @@
     экономического рынка, к  которому оно применяется 
 </p>
 
-<p>
+
+<h2>
     Дисконт на товарном рынке
-</p>
+</h2> 
 
 <p>
     Скидка может быть предложена при незамедли-
@@ -18,4 +21,17 @@
     довательно, достичь экономии от масштаба, или используются,
     как уловка, чтобы заручиться «верностью» клиента, или предо-
     ставляются по требованию крупного и влиятельного покупателя.
+</p>
+
+
+<p>
+    <img src="web-front-labs\картинка 1.webp" alt="картинка1">
+</p>
+
+<p>
+    <img src="web-front-labs\картинка 2.webp" alt="картинка2">
+</p>
+
+<p>
+    <img src="web-front-labs\картинка 3.webp" alt="картинка3">
 </p>
