--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -25,13 +25,18 @@
 
 
 <p>
-    <img src="web-front-labs\картинка 1.webp" alt="картинка1">
+    <img src="картинка 1.webp" alt="картинка1" height="100px" width="100px">
 </p>
 
 <p>
-    <img src="web-front-labs\картинка 2.webp" alt="картинка2">
+    <img src="картинка 2.webp" alt="картинка2" height="100px" width="100px">
 </p>
 
 <p>
-    <img src="web-front-labs\картинка 3.webp" alt="картинка3">
+    <img src="картинка 3.webp" alt="картинка3" height="100px" width="100px">
 </p>
+
+<div>
+    <img src="картинка 3.webp" alt="картинка3" width="45%">
+    <img src="картинка 2.webp" alt="картинка2" width="45%">
+</div>
