--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -1,42 +1,54 @@
-<h1>
-    Дисконт
-</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Горков Родион Станиславович. Дисконт</title>
+</head>
+<body>
+        
+    <h1>
+        Дисконт
+    </h1>
 
-<p>
-    <b>Дисконт</b>  (от англ. <i>discount</i> discount — <i>скидка</i>, <i>разница</i>) — 
-    многозначное понятие, зависящее от 
-    экономического рынка, к  которому оно применяется 
-</p>
-
-
-<h2>
-    Дисконт на товарном рынке
-</h2> 
-
-<p>
-    Скидка может быть предложена при незамедли-
-    тельной оплате наличными (наличная скидка) либо при оптовой
-    закупке (торговая скидка). Торговые скидки предоставляются для
-    того, чтобы позволить продавцу увеличить объём продаж и, сле-
-    довательно, достичь экономии от масштаба, или используются,
-    как уловка, чтобы заручиться «верностью» клиента, или предо-
-    ставляются по требованию крупного и влиятельного покупателя.
-</p>
+    <p>
+        <b>Дисконт</b>  (от англ. <i>discount</i> discount — <i>скидка</i>, <i>разница</i>) — 
+        многозначное понятие, зависящее от 
+        экономического рынка, к  которому оно применяется 
+    </p>
 
 
-<p>
-    <img src="картинка 1.webp" alt="картинка1" height="100px" width="100px">
-</p>
+    <h2>
+        Дисконт на товарном рынке
+    </h2> 
 
-<p>
-    <img src="картинка 2.webp" alt="картинка2" height="100px" width="100px">
-</p>
+    <p>
+        Скидка может быть предложена при незамедли-
+        тельной оплате наличными (наличная скидка) либо при оптовой
+        закупке (торговая скидка). Торговые скидки предоставляются для
+        того, чтобы позволить продавцу увеличить объём продаж и, сле-
+        довательно, достичь экономии от масштаба, или используются,
+        как уловка, чтобы заручиться «верностью» клиента, или предо-
+        ставляются по требованию крупного и влиятельного покупателя.
+    </p>
 
-<p>
-    <img src="картинка 3.webp" alt="картинка3" height="100px" width="100px">
-</p>
 
-<div>
-    <img src="картинка 3.webp" alt="картинка3" width="45%">
-    <img src="картинка 2.webp" alt="картинка2" width="45%">
-</div>
+    <p>
+        <img src="картинка 1.webp" alt="картинка1" height="100px" width="100px">
+    </p>
+
+    <p>
+        <img src="картинка 2.webp" alt="картинка2" height="100px" width="100px">
+    </p>
+
+    <p>
+        <img src="картинка 3.webp" alt="картинка3" height="100px" width="100px">
+    </p>
+
+    <div>
+        <img src="картинка 3.webp" alt="картинка3" width="45%">
+        <img src="картинка 2.webp" alt="картинка2" width="45%">
+    </div>
+</body>
+</html>
