--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -89,7 +89,7 @@
         что её курс будет понижаться между датами заключения и испол-
         нения сделки. Здесь противоположным понятием является
         премия — когда при сделке на срок валюта котируется дороже,
-        чем по наличным сделкам[1].
+        чем по наличным сделкам<sup></sup>[1]</sup>.
     </p>
 
 
@@ -102,7 +102,7 @@
         с номинальной стоимости ценной бумаги. Например, если облига-
         цию с номиналом 1000 $ продают за 900 $, дисконт составляет 10
         %. Дисконтом также называют разницу между ценой ценной бу-
-        маги при её реализации и при погашении[1].
+        маги при её реализации и при погашении<sup>[1]</sup>.
     
     </p>
 
@@ -115,7 +115,8 @@
         В денежном обращении дисконтом называют обесценивание од-
         них видов денег по отношению к другим, параллельно
         обращающимся (например, бумажных денег по отношению к зо-
-        лотым монетам)[1].
+        лотым монетам) <sup><sup>[1]</sup></sup>
+
     </p>
 
     <h2>
@@ -137,5 +138,43 @@
         щества и его залоговой стоимостью, используемой для определе-
         ния суммы выдаваемого банком кредита.
     </p>
+
+    <table>
+        <th>
+            <td>Дата</td>
+            <td>Платеж</td>
+            <td>Проценты</td>
+            <td>Тело кредита</td>
+            <td>Остаток</td>
+        </th>
+        <tr>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+        </tr>
+        <tr>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+        </tr>
+        <tr>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+        </tr>
+        <tr>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+            <td>9999</td>
+        </tr>
+    </table>
 </body>
 </html>
