--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -139,7 +139,7 @@
         ния суммы выдаваемого банком кредита.
     </p>
 
-    <table>
+    <table border="1">
         <th>
             <td>Дата</td>
             <td>Платеж</td>
