Таблица c бордером 100% по ширине

--- a/lab1/discount.html
+++ b/lab1/discount.html
@@ -89,7 +89,7 @@
         что её курс будет понижаться между датами заключения и испол-
         нения сделки. Здесь противоположным понятием является
         премия — когда при сделке на срок валюта котируется дороже,
-        чем по наличным сделкам<sup></sup>[1]</sup>.
+        чем по наличным сделкам <sup>[1]</sup>.
     </p>
 
 
@@ -139,14 +139,14 @@
         ния суммы выдаваемого банком кредита.
     </p>
 
-    <table border="1">
-        <th>
-            <td>Дата</td>
-            <td>Платеж</td>
-            <td>Проценты</td>
-            <td>Тело кредита</td>
-            <td>Остаток</td>
-        </th>
+    <table border="1" width="100%">
+        <tr>
+            <th>Дата</th>
+            <th>Платеж</th>
+            <th>Проценты</th>
+            <th>Тело кредита</th>
+            <th>Остаток</th>
+        </tr>
         <tr>
             <td>9999</td>
             <td>9999</td>
