--- a/lab1/favorites.html
+++ b/lab1/favorites.html
@@ -16,5 +16,32 @@
         <li>груша</li>
         <li>лимон</li>
     </ol>
+    <ol type="1">
+        <li>Яблоко</li>
+        <li>банан</li>
+        <li>киви</li>
+        <li>арбуз</li>
+        <li>апельсин</li>
+        <li>груша</li>
+        <li>лимон</li>
+    </ol>
+    <ol type="A">
+        <li>Яблоко</li>
+        <li>банан</li>
+        <li>киви</li>
+        <li>арбуз</li>
+        <li>апельсин</li>
+        <li>груша</li>
+        <li>лимон</li>
+    </ol>
+    <ol type="I">
+        <li>Яблоко</li>
+        <li>банан</li>
+        <li>киви</li>
+        <li>арбуз</li>
+        <li>апельсин</li>
+        <li>груша</li>
+        <li>лимон</li>
+    </ol>
 </body>
 </html>
