--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -7,12 +7,15 @@
     <title>Лабораторная работа 1</title>
 </head>
 <body>
+    <h1>Лабораторная работа 1</h1>  
+    </br>
 
     <ul>
         <li><a href="discount.html">Дисконт</a></li>
         <li><a href="table.html">Таблица выплат</a></li>
+        <li><a href="favorites.html">Любимые продукты</a></li>
     </ul>
 
-    
+
 </body>
 </html>
