--- a/lab1/favorites.html
+++ b/lab1/favorites.html
@@ -15,6 +15,10 @@
         <li>апельсин</li>
         <li>груша</li>
         <li>лимон</li>
+        <li>виноград</li>
+        <li>лайм</li>
+        <li>мандарин</li>
+        <li>стейк</li>
     </ol>
     <ol type="1">
         <li>Яблоко</li>
@@ -24,6 +28,10 @@
         <li>апельсин</li>
         <li>груша</li>
         <li>лимон</li>
+        <li>виноград</li>
+        <li>лайм</li>
+        <li>мандарин</li>
+        <li>стейк</li>
     </ol>
     <ol type="A">
         <li>Яблоко</li>
@@ -33,6 +41,10 @@
         <li>апельсин</li>
         <li>груша</li>
         <li>лимон</li>
+        <li>виноград</li>
+        <li>лайм</li>
+        <li>мандарин</li>
+        <li>стейк</li>
     </ol>
     <ol type="I">
         <li>Яблоко</li>
@@ -42,6 +54,10 @@
         <li>апельсин</li>
         <li>груша</li>
         <li>лимон</li>
+        <li>виноград</li>
+        <li>лайм</li>
+        <li>мандарин</li>
+        <li>стейк</li>
     </ol>
 </body>
 </html>
