--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -55,6 +55,29 @@
 
         </div>
 
+        <h2>
+            Преимущества
+        </h2>
+        <ol>
+            <li> Поддержка любого типа флеш-носителей и USB жестких дисков </li>
+            <li> Простое управление </li>
+            <li> Различные режимы копирования </li>
+            <li> Не требуется время для загрузки и остывания </li>
+            <li> Высокая скорость копирования - 2 Гб/мин </li>
+
+
+        </ol>
+        <div>
+            А также:
+        </div>
+        <ol start="6">
+            <li> Автономная система под ключ, компьютер не требуется </li>
+            <li> Копирование и сравнение с оригиналом, что исключает ошибки </li> 
+            <li>
+                ЖК-дисплей с отображением всего, что в данный момент делает дубликатор
+            </li>
+        </ol>
+        
     </main>
 
     <footer>
