--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Горшков Родион Станиславович Текст о дубликаторах USB</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -75,9 +76,132 @@
             <li> Копирование и сравнение с оригиналом, что исключает ошибки </li> 
             <li>
                 ЖК-дисплей с отображением всего, что в данный момент делает дубликатор
+                вложенный список
+                <ul>
+                    <li>Пункт 1</li>
+                    <li>Пункт 2</li>
+                </ul>
             </li>
         </ol>
-        
+
+        <table border="1">
+            <thead>
+                <tr>
+                    <td>модель</td>
+                    <td>количество портов</td>
+                    <td>цена руб</td>
+                    <td>наличие</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>USB-3 (UB300)</td>
+                    <td>5</td>
+                    <td>9999</td>
+                    <td rowspan="4">Есть в наличие</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-7</td>
+                    <td>43</td>
+                    <td>9999</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-15</td>
+                    <td>2</td>
+                    <td>9999</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-23</td>
+                    <td>9</td>
+                    <td>9999</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-31</td>
+                    <td>20</td>
+                    <td>9999</td>
+                    <td rowspan="2">Нет в наличие</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-47</td>
+                    <td>54</td>
+                    <td>9999</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-55</td>
+                    <td>1</td>
+                    <td>9999</td>
+                    <td rowspan="2">Есть в наличие</td>
+                </tr>
+                <tr>
+                    <td>Super USB 1-63</td>
+                    <td>85</td>
+                    <td>9999</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>
+            Usb дубликаторы для жестких дисков
+        </h2>
+        <table border="2">
+            <thead>
+                <tr>
+                    <td colspan="4">Usb дубликаторы intelegens - series</td>
+                </tr>
+                <tr>
+                    <td colspan="4">С поддержкой внешних жестких дисков USB</td>
+                </tr>
+                <tr>
+                    <td>Модель</td>
+                    <td>Кол во жестких дисков</td>
+                    <td>Цена</td>
+                    <td>Наличие</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Intelligent USB 1-9<sup>A</sup></td>
+                    <td>10</td>
+                    <td>205 000</td>
+                    <td rowspan="2">В наличие</td>
+                </tr>
+                <tr>
+                    <td>Intelligent USB 1-19<sup>X</sup></td>
+                    <td>20</td>
+                    <td>305 700</td>
+                </tr>
+                <tr>
+                    <td>Intelligent USB 1-29<sup>S</sup></td>
+                    <td>30</td>
+                    <td>370 000</td>
+                    <td rowspan="3">В пути</td>
+                </tr>
+                <tr>
+                    <td>Intelligent USB 1-29<sup>G</sup></td>
+                    <td>30</td>
+                    <td>480 000</td>
+                </tr>
+                <tr>
+                    <td>Intelligent USB 1-39<sup>N</sup></td>
+                    <td>40</td>
+                    <td>560 000</td>
+                </tr>
+                <tr>
+                    <td>Intelligent USB 1-59<sup>N</sup></td>
+                    <td>60</td>
+                    <td rowspan="3">По запросу</td>
+                    <td rowspan="3">На заказ</td>
+                </tr>
+                <tr>
+                    <td>Intelligent USB 1-69 <sup>XN</sup></td>
+                    <td>70</td>
+                </tr>
+                <tr>
+                    <td>Intelligent USB 1-119<sup>XXN</sup></td>
+                    <td>120</td>
+                </tr>
+            </tbody>
+        </table>
+
     </main>
 
     <footer>
