--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -46,7 +46,7 @@
                 Процесс копирования флешек или USB жестких дисков
                 происходит асинхронно. Дубликатор USB управляется с помощью
                 контроллера, на котором всего 4 кнопки. Высокоскоростное
-                копирование и наличие функцией Compare (сверка с оригиналом),
+                копирование и наличие функцией <span title="Патентованная технология">Compare</span> (сверка с оригиналом),
                 гарантирует успешность копии. Надежный, простой и удобный
                 дубликатор USB &ndash; лучший компаньон для любого бизнеса.
         
@@ -95,7 +95,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>USB-3 (UB300)</td>
+                    <td>USB-3 (UB300) <sup class="new-sup">New!</sup></td>
                     <td>5</td>
                     <td>9999</td>
                     <td rowspan="4">Есть в наличие</td>
@@ -106,7 +106,7 @@
                     <td>9999</td>
                 </tr>
                 <tr>
-                    <td>Super USB 1-15</td>
+                    <td>Super USB 1-15  <sup class="new-sup">New!</sup></td>
                     <td>2</td>
                     <td>9999</td>
                 </tr>
@@ -116,7 +116,7 @@
                     <td>9999</td>
                 </tr>
                 <tr>
-                    <td>Super USB 1-31</td>
+                    <td>Super USB 1-31  <sup class="new-sup">New!</sup></td>
                     <td>20</td>
                     <td>9999</td>
                     <td rowspan="2">Нет в наличие</td>
@@ -133,7 +133,7 @@
                     <td rowspan="2">Есть в наличие</td>
                 </tr>
                 <tr>
-                    <td>Super USB 1-63</td>
+                    <td>Super USB 1-63  <sup class="new-sup">New!</sup></td>
                     <td>85</td>
                     <td>9999</td>
                 </tr>
