--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -6,11 +6,16 @@
     <title>Горшков Родион Станиславович Лабораторная работа 2</title>
 </head>
 <body>
-    <header>
-        Тут может быть навбар и прочее
-    </header>
+    <h1>Лабораторная работа 2</h1>  
+    </br>
 
-    <main>Основной контент страницы</main>
+    <main>
+        <ul>
+            <li><a href="usb.html">USB</a></li>
+        </ul>
+
+    </main>
+
 
     <footer>
         &copy; Горшков Родион. 2 курс 2025 1 &lt; 2
