--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -142,7 +142,7 @@
         <h2>
             Usb дубликаторы для жестких дисков
         </h2>
-        <table border="2">
+        <table border="2" class="table2">
             <thead>
                 <tr>
                     <td colspan="4">Usb дубликаторы intelegens - series</td>
