--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -98,7 +98,7 @@
                     <td>USB-3 (UB300) <sup class="new-sup">New!</sup></td>
                     <td>5</td>
                     <td>9999</td>
-                    <td rowspan="4">Есть в наличие</td>
+                    <td rowspan="4">Есть в наличии</td>
                 </tr>
                 <tr>
                     <td>Super USB 1-7</td>
@@ -119,7 +119,7 @@
                     <td>Super USB 1-31  <sup class="new-sup">New!</sup></td>
                     <td>20</td>
                     <td>9999</td>
-                    <td rowspan="2">Нет в наличие</td>
+                    <td rowspan="2">Нет в наличии </td>
                 </tr>
                 <tr>
                     <td>Super USB 1-47</td>
@@ -130,7 +130,7 @@
                     <td>Super USB 1-55</td>
                     <td>1</td>
                     <td>9999</td>
-                    <td rowspan="2">Есть в наличие</td>
+                    <td rowspan="2">Есть в наличии</td>
                 </tr>
                 <tr>
                     <td>Super USB 1-63  <sup class="new-sup">New!</sup></td>
@@ -162,7 +162,7 @@
                     <td>Intelligent USB 1-9<sup>A</sup></td>
                     <td>10</td>
                     <td>205 000</td>
-                    <td rowspan="2">В наличие</td>
+                    <td rowspan="2">В наличии</td>
                 </tr>
                 <tr>
                     <td>Intelligent USB 1-19<sup>X</sup></td>
