--- a/lab2/gone.html
+++ b/lab2/gone.html
@@ -32,7 +32,7 @@
         </p>
 
 
-        <site>Маргарет Митчелл. «Унесенные ветром».</site>
+        <site class="src">Маргарет Митчелл. «Унесенные ветром».</site>
 
     </div>
 
