Добавил ссылку Gone

--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -12,6 +12,7 @@
     <main>
         <ul>
             <li><a href="usb.html">USB</a></li>
+            <li><a href="gone.html">Gone</a></li>
         </ul>
 
     </main>
