--- a/lab2/gone.html
+++ b/lab2/gone.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Горшков Родион Станиславович Унесенные ветром</title>
     <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="gone.css">
 </head>
 <body>
     <header>Тут может быть анавбар или еще что то </header>
