--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Горшков Родион Станиславович Лабораторная работа 2</title>
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
     <h1>Лабораторная работа 2</h1>  
@@ -13,6 +14,7 @@
         <ul>
             <li><a href="usb.html">USB</a></li>
             <li><a href="gone.html">Gone</a></li>
+            <li><a href="text.html">Text</a></li>
         </ul>
 
     </main>
