Заготовка для 3 лабораторной работы

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web програмирование</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="shortcut icon" href="/static/images/favicon-32x32.png">
 </head>
 <body>
     <main>
@@ -19,7 +20,7 @@
                 <h4><a href="lab2\lab2.html">Лабораторная работа 2</a></h4>
             </li>
             <li>
-                <h4><a href="">Лабораторная работа 3</a></h4>
+                <h4><a href="lab3\lab3.html">Лабораторная работа 3</a></h4>
             </li>
             <li>
                 <h4><a href="">Лабораторная работа 4</a></h4>
