--- a/lab2/gone.html
+++ b/lab2/gone.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Горшков Родион Станиславович Унесенные ветром</title>
     <link rel="stylesheet" href="../main.css">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="gone.css">
+    <link rel="shortcut icon" href="../static/images/favicon-32x32.png">
 </head>
 <body>
     <header>Тут может быть анавбар или еще что то </header>
