--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -6,6 +6,7 @@
     <title>Горшков Родион Станиславович Текст о дубликаторах USB</title>
     <link rel="stylesheet" href="../main.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="favicon-32x32.png">
 </head>
 <body>
     <header>
