--- a/lab1/favorites.html
+++ b/lab1/favorites.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="favicon-32x32.png">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Мои любимые продукты</title>
 </head>
