--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Горшков Родион Станиславович Лабораторная работа 2</title>
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="shortcut icon" href="../static/images/favicon-32x32.png">
 </head>
 <body>
     <h1>Лабораторная работа 2</h1>  
