--- a/lab2/text.html
+++ b/lab2/text.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Горшков Родион Станиславович Оформление текста</title>
     <link rel="stylesheet" href="../main.css">
+    <link rel="shortcut icon" href="favicon-32x32.png">
     <link rel="stylesheet" href="text.css">
 </head>
 <body>
