--- a/lab3/quote.html
+++ b/lab3/quote.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Горшков Родион Станиславович Лабораторная работа 3</title>
+    <title>Горшков Родион Станиславович цитата</title>
     <link rel="shortcut icon" href="../static/images/favicon-32x32.png">
     <link rel="stylesheet" href="../static/css/main.css">
-
+    <link rel="stylesheet" href="quote.css">
 </head>
 <body>
     <header>
@@ -14,11 +14,10 @@
     </header>
 
     <main>
-        <ul>
-            <li><a href="quote.html">Цитата</a></li>
-            <li><a href="book.html">Книга</a></li>
-            
-        </ul>
+        <div class="citation">
+            <div class="text">Стремитесь не к успеху а к ценностям которые он дает</div>
+            <div class="author">Альберт Эйнштейн</div>
+        </div>
     </main>
 
 
