--- a/index.html
+++ b/index.html
@@ -12,32 +12,51 @@
         <h1>
             Web - програмирование
         </h1>
-        <ul>
-            <li>
-                <h4><a href="lab1\lab1.html">Лабораторная работа 1</a></h4>
-            </li>
-            <li>
-                <h4><a href="lab2\lab2.html">Лабораторная работа 2</a></h4>
-            </li>
-            <li>
-                <h4><a href="lab3\lab3.html">Лабораторная работа 3</a></h4>
-            </li>
-            <li>
-                <h4><a href="">Лабораторная работа 4</a></h4>
-            </li>
-            <li>
-                <h4><a href="">Лабораторная работа 5</a></h4>
-            </li>
-            <li>
-                <h4><a href="">Лабораторная работа 6</a></h4>
-            </li>
-            <li>
-                <h4><a href="">Лабораторная работа 7</a></h4>
-            </li>
-            <li>
-                <h4><a href="">Лабораторная работа 8</a></h4>
-            </li>
-        </ul>
+        <div class="menu">
+            <ul>
+                <li>
+                    <h4><a href="lab1\lab1.html">Лабораторная работа 1</a></h4>
+                </li>
+                <li>
+                    <h4><a href="lab2\lab2.html">Лабораторная работа 2</a></h4>
+                </li>
+                <li>
+                    <h4><a href="lab3\lab3.html">Лабораторная работа 3</a></h4>
+                </li>
+                <li>
+                    <h4><a href="">Лабораторная работа 4</a></h4>
+                </li>
+                <li>
+                    <h4><a href="">Лабораторная работа 5</a></h4>
+                </li>
+                <li>
+                    <h4><a href="">Лабораторная работа 6</a></h4>
+                </li>
+                <li>
+                    <h4><a href="">Лабораторная работа 7</a></h4>
+                </li>
+                <li>
+                    <h4><a href="">Лабораторная работа 8</a></h4>
+                </li>
+            </ul>
+        </div>
+        
     </main>
+    <footer>
+        &copy; Горшков Родион. 2 курс 2025
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    </footer>
+    
 </body>
 </html>
