--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -17,6 +17,8 @@
         <ul>
             <li><a href="quote.html">Цитата</a></li>
             <li><a href="book.html">Книга</a></li>
+            <li><a href="display.html">Display</a></li>
+
             
         </ul>
     </main>
