--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -22,7 +22,7 @@
 
 
     <footer>
-        &copy; Горшков Родион. 2 курс 2025 1 &lt; 2
+        &copy; Горшков Родион. 2 курс 2025
     </footer>
 </body>
 </html>
