--- a/lab3/book.html
+++ b/lab3/book.html
@@ -6,10 +6,8 @@
     <link rel="shortcut icon" href="../static/images/favicon-32x32.png">
     <link rel="stylesheet" href="../static/css/main.css">
     <title>book</title>
-</head>
-<body>
     <style>
-        div {
+        .content div {
             margin: 20px;
             border: 1px solid;
             border-radius: 7px;
@@ -17,29 +15,32 @@
             width: 500px;
             max-height: 100px;
         }
-
     </style>
+</head>
+<body>
     <header>
-
+        НГТУ, ФБ, Лабораторная работа 3
     </header>
 
     <main>
-        <div style="overflow: hidden;">
-            С тех пор как найден и доказан закон Коперника, одно признание того, что движется не солнце, а земля, уничтожило всю космографию древних. Можно было, опровергнув закон, удержать старое воззрение на движения тел, но, не опровергнув его, нельзя было, казалось, продолжать изучение птоломеевых миров. Но и после открытия закона Коперника птоломеевы миры еще долго продолжали изучаться.
-        </div>
-        <div style="overflow: auto;">
-            С тех пор как первый человек сказал и доказал, что количество рождений или преступлений подчиняется математическим законам и что известные географические и политико-экономические условия определяют тот или другой образ правления, что известные отношения населения к земле производят движения народа, — с тех пор уничтожились в сущности своей те основания, на которых строилась история.
-        </div>
-        <div style="overflow: scroll;">
-            А между тем прежняя история продолжает изучаться наравне с законами статистики, географии, политической экономии, сравнительной филологии и геологии, прямо противоречащими ее положениям.
-        </div>
-        <div style="overflow: visible;">
-            Можно было, опровергнув новые законы, удержать прежнее воззрение на историю, но, не опровергнув их, нельзя было, казалось, продолжать изучать исторические события как произведения свободной воли людей. Ибо если установился такой-то образ правления или совершилось такое-то движение народа вследствие таких-то географических, этнографических или экономических условий, то воля тех людей, которые представляются нам установившими образ правления или возбудившими движение народа, уже не может быть рассматриваема как причина.
+        <div class="content">
+            <div style="overflow: hidden;">
+                С тех пор как найден и доказан закон Коперника, одно признание того, что движется не солнце, а земля, уничтожило всю космографию древних. Можно было, опровергнув закон, удержать старое воззрение на движения тел, но, не опровергнув его, нельзя было, казалось, продолжать изучение птоломеевых миров. Но и после открытия закона Коперника птоломеевы миры еще долго продолжали изучаться.
+            </div>
+            <div style="overflow: auto;">
+                С тех пор как первый человек сказал и доказал, что количество рождений или преступлений подчиняется математическим законам и что известные географические и политико-экономические условия определяют тот или другой образ правления, что известные отношения населения к земле производят движения народа, — с тех пор уничтожились в сущности своей те основания, на которых строилась история.
+            </div>
+            <div style="overflow: scroll;">
+                А между тем прежняя история продолжает изучаться наравне с законами статистики, географии, политической экономии, сравнительной филологии и геологии, прямо противоречащими ее положениям.
+            </div>
+            <div style="overflow: visible;">
+                Можно было, опровергнув новые законы, удержать прежнее воззрение на историю, но, не опровергнув их, нельзя было, казалось, продолжать изучать исторические события как произведения свободной воли людей. Ибо если установился такой-то образ правления или совершилось такое-то движение народа вследствие таких-то географических, этнографических или экономических условий, то воля тех людей, которые представляются нам установившими образ правления или возбудившими движение народа, уже не может быть рассматриваема как причина.
+            </div>
         </div>
     </main>
 
     <footer>
-
+        &copy; Горшков Родион. 2 курс 2025
     </footer>
 
 </body>
