--- a/lab3/display.html
+++ b/lab3/display.html
@@ -23,30 +23,32 @@
 </head>
 <body>
     <header>
-        
+        Навбар 
     </header>
     <main>
-        <div class="discount">
-            <h1>Дисконт в теории игр.</h1>
-            <div>
-                В теории игр, дисконт — текущая стои
-                мость денежной единицы будущего периода, умноженная на ве
-                роятность повторения игры для игр с неизвестным числом по
-                вторений.
+        <div class="content">
+            <div class="discount">
+                <h1>Дисконт в теории игр.</h1>
+                <div>
+                    В теории игр, дисконт — текущая стои
+                    мость денежной единицы будущего периода, умноженная на ве
+                    роятность повторения игры для игр с неизвестным числом по
+                    вторений.
+                </div>
             </div>
-        </div>
-        <div class="discount">
-            <h1>Залоговый дисконт.</h1>
-            <div>
-                Разница между реальной рыночной стоимостью
-                залогового имущества и его залоговой стои
-                мостью, используемой для определения суммы выдаваемого
-                банком кредита
+            <div class="discount">
+                <h1>Залоговый дисконт.</h1>
+                <div>
+                    Разница между реальной рыночной стоимостью
+                    залогового имущества и его залоговой стои
+                    мостью, используемой для определения суммы выдаваемого
+                    банком кредита
+                </div>
             </div>
         </div>
     </main>
-    <header>
-
-    </header>
+    <footer>
+        &copy; Горшков Родион. 2 курс 2025
+    </footer>
 </body>
 </html>
