--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -14,13 +14,15 @@
     </header>
 
     <main>
-        <ul>
-            <li><a href="quote.html">Цитата</a></li>
-            <li><a href="book.html">Книга</a></li>
-            <li><a href="display.html">Display</a></li>
-
-            
-        </ul>
+        
+        <div class="content">
+            <ul>
+                <li><a href="quote.html">Цитата</a></li>
+                <li><a href="book.html">Книга</a></li>
+                <li><a href="display.html">Display</a></li>
+                <li><a href="text.html">Текст</a></li>
+            </ul>
+        </div>
     </main>
 
 
