--- a/lab3/quote.html
+++ b/lab3/quote.html
@@ -14,9 +14,23 @@
     </header>
 
     <main>
-        <div class="citation">
-            <div class="text">Стремитесь не к успеху а к ценностям которые он дает</div>
-            <div class="author">Альберт Эйнштейн</div>
+        <div class="content">
+            <div class="citation">
+                <div class="text">Стремитесь не к успеху а к ценностям которые он дает</div>
+                <div class="author">Альберт Эйнштейн</div>
+            </div>
+            <div class="citation">
+                <div class="text">Ваше время ограничено, не тратьте его, живя чужой жизнью</div>
+                <div class="author">Стив Джобс</div>
+            </div>
+            <div class="citation">
+                <div class="text">Если вы думаете, что на что-то способны, вы правы; если думаете, что у вас ничего не получится - вы тоже правы.</div>
+                <div class="author">Генри Форд</div>
+            </div>
+            <div class="citation">
+                <div class="text">Стоит только поверить, что вы можете – и вы уже на полпути к цели.</div>
+                <div class="author">Теодор Рузвельт</div>
+            </div>
         </div>
     </main>
 
