--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <h4><a href="lab3\lab3.html">Лабораторная работа 3</a></h4>
                     </li>
                     <li>
-                        <h4><a href="">Лабораторная работа 4</a></h4>
+                        <h4><a href="lab4/lab4.html">Лабораторная работа 4</a></h4>
                     </li>
                     <li>
                         <h4><a href="">Лабораторная работа 5</a></h4>
