--- a/lab4/position.html
+++ b/lab4/position.html
@@ -22,9 +22,19 @@
             top: -130px;
             z-index: -1;
         }
+        .position-relative:hover {
+            z-index: 1;
+            cursor: pointer;
+        }
         .position-absolute {
             position: absolute;
             left: 300px;
+        }
+        .position-absolute:hover {
+            width: 320px;
+            height: 80px;
+            box-shadow: 3px 2px 14px black;
+            background-color: wheat;
         }
     </style>
 </head>
