--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -18,6 +18,7 @@
         <div class="content">
             <ul>
                 <li><a href="position.html">Position</a></li>
+                <li><a href="comic.html">комикс</a></li>
             </ul>
         </div>
     </main>
