--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -3,30 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Горшков Родион Станиславович Лабораторная работа 4</title>
+    <title>Горшков Родион Станиславович Лабораторная работа 5</title>
     <link rel="shortcut icon" href="../static/images/favicon-32x32.png">
     <link rel="stylesheet" href="../static/css/main.css">
 </head>
 <body>
     <header>
-        НГТУ, ФБ, Лабораторная работа 4
+        НГТУ, ФБ, Лабораторная работа 5
     </header>
 
     <main>
         
         <div class="content">
             <ul>
-                <li><a href="position.html">Position</a></li>
-                <li><a href="comic.html">комикс</a></li>
-                <li><a href="progress.html">Прогресс</a></li>
-                <li><a href="tags.html">Теги</a></li>
-                
+                <li><a href="aritmetic.html">Ariphmetic</a></li>
+                <li><a href="cart.html">корзина</a></li>
+
             </ul>
         </div>
     </main>
 
 
-    <footer>
+    <footer ondblclick="">
         &copy; Горшков Родион. 2 курс 2025
     </footer>
 </body>
