--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web програмирование</title>
-    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="static/css/main.css">
     <link rel="shortcut icon" href="/static/images/favicon-32x32.png">
 </head>
 <body>
@@ -29,7 +29,7 @@
                         <h4><a href="lab4/lab4.html">Лабораторная работа 4</a></h4>
                     </li>
                     <li>
-                        <h4><a href="">Лабораторная работа 5</a></h4>
+                        <h4><a href="lab5/lab5.html ">Лабораторная работа 5</a></h4>
                     </li>
                     <li>
                         <h4><a href="">Лабораторная работа 6</a></h4>
