--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -18,7 +18,8 @@
             <ul>
                 <li><a href="aritmetic.html">Ariphmetic</a></li>
                 <li><a href="cart.html">корзина</a></li>
-
+                <li><a href="circles.html">Круги</a></li>
+                <li><a href="blur.html">Блюр</a></li>
             </ul>
         </div>
     </main>
