--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -20,6 +20,7 @@
                 <li><a href="cart.html">корзина</a></li>
                 <li><a href="circles.html">Круги</a></li>
                 <li><a href="blur.html">Блюр</a></li>
+                <li><a href="event.html">Событие</a></li>
             </ul>
         </div>
     </main>
