--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <h4><a href="lab5/lab5.html ">Лабораторная работа 5</a></h4>
                     </li>
                     <li>
-                        <h4><a href="">Лабораторная работа 6</a></h4>
+                        <h4><a href="lab6/lab6.html">Лабораторная работа 6</a></h4>
                     </li>
                     <li>
                         <h4><a href="">Лабораторная работа 7</a></h4>
