--- a/lab5/event.html
+++ b/lab5/event.html
@@ -11,7 +11,7 @@
         #block {
             height: 200px;
             width: 200px;
-            background-color: darkgreen;
+            background-color: rgb(34, 206, 143);
             cursor: crosshair;
             text-align: center;
         }
