--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -3,23 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Горшков Родион Станиславович Лабораторная работа 6</title>
+    <title>Горшков Родион Станиславович Лабораторная работа 7</title>
     <link rel="shortcut icon" href="../static/images/favicon-32x32.png">
     <link rel="stylesheet" href="../static/css/main.css">
 </head>
 <body>
     <header>
-        НГТУ, ФБ, Лабораторная работа 6
+        НГТУ, ФБ, Лабораторная работа 7
     </header>
 
     <main>
-        
         <div class="content">
             <ul>
-                <li><a href="mult_table.html">Таблица умножения</a></li>
-                <li><a href="diagram.html">Диаграмма</a></li>
-                <li><a href="books.html">Книги</a></li>
-                <li><a href="date.html">Дата</a></li>
+                <li><a href="bloks.html">Блоки</a></li>
+                <li><a href="dollar.html">Доллар</a></li>
             </ul>
         </div>
     </main>
